--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(plot_cell_similarity)
 export(plot_dim_red)
 export(plot_gene_PC)
 export(plot_prob_line)
+export(plot_two_branch)
 export(pseudo_real_time)
 export(raw_to_seurat)
 export(remove_ribosomal_genes)
