--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,20 @@
 
 export(DE_lineage_genes)
 export(RunGPLVM)
+export(add_pseudotime_to_net)
 export(all_pathways_heat_pca)
 export(arrange_plots)
 export(arrow_axis)
 export(batch_correct)
 export(cell_heat)
 export(cell_violin)
+export(change_expre_level)
 export(clean_metadata)
 export(colors2labels)
 export(compare_cluster_enrichment)
 export(compute_all_cor)
+export(custom_net)
+export(custom_net_cells)
 export(custom_tick)
 export(cycle_over_time)
 export(date_to_CS)
@@ -19,6 +23,8 @@ export(date_to_gene)
 export(dim_plot_cell_similarity)
 export(dim_red_3D_traj)
 export(display_cluster_enrichment)
+export(enrich_bar)
+export(filter_genes)
 export(find_DE_genes)
 export(find_eigengene)
 export(find_peak)
@@ -27,10 +33,12 @@ export(gene_over_pseudotime)
 export(gene_per_enriched_term)
 export(gene_per_term)
 export(get_DE_from_KL)
+export(get_all_path_view)
 export(get_cell_similarity)
 export(get_module_score)
 export(get_path)
 export(get_phase_score)
+export(hub_score)
 export(incorporate_TSC)
 export(label_transfer)
 export(load_all_data)
@@ -44,6 +52,7 @@ export(phase_PC_plot)
 export(phase_density_plot)
 export(plot_DE_genes)
 export(plot_WGCNA_net)
+export(plot_all_WGCNA_nets)
 export(plot_cell_similarity)
 export(plot_dim_red)
 export(plot_gene_PC)
@@ -59,12 +68,14 @@ export(run_GSEA_all_types)
 export(run_dim_red)
 export(save_DE_genes)
 export(save_for_10X)
+export(save_hub_score)
 export(save_peak_genes)
 export(save_to_csv)
 export(seurat_heat)
 export(seurat_heat_highlight)
 export(seurat_heat_split)
 export(seurat_violin)
+export(seurat_volcano)
 export(standardise_name)
 export(theme_TB)
 export(time_cluster_plot)
