--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(compare_cluster_enrichment)
 export(compute_all_cor)
 export(custom_net)
 export(custom_net_cells)
+export(custom_net_diff_nets)
 export(custom_tick)
 export(cycle_over_time)
 export(date_to_CS)
@@ -29,6 +30,7 @@ export(find_DE_genes)
 export(find_eigengene)
 export(find_peak)
 export(find_transition_from_seurat)
+export(gene_name_to_entrez)
 export(gene_over_pseudotime)
 export(gene_per_enriched_term)
 export(gene_per_term)
@@ -38,6 +40,7 @@ export(get_cell_similarity)
 export(get_module_score)
 export(get_path)
 export(get_phase_score)
+export(graph_abs_time)
 export(hub_score)
 export(incorporate_TSC)
 export(label_transfer)
@@ -48,6 +51,7 @@ export(merge_seurat)
 export(partial_relevel)
 export(path_eigen)
 export(pca_with_pt_line)
+export(peak_gene_for_heatmap)
 export(phase_PC_plot)
 export(phase_density_plot)
 export(plot_DE_genes)
