--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(dim_plot_cell_similarity)
 export(dim_red_3D_traj)
 export(display_cluster_enrichment)
 export(enrich_bar)
+export(fast_subset)
 export(filter_genes)
 export(find_DE_genes)
 export(find_eigengene)
@@ -48,6 +49,7 @@ export(load_all_data)
 export(load_correct_label)
 export(make_cycle_heat)
 export(merge_seurat)
+export(normalize_prob)
 export(partial_relevel)
 export(path_eigen)
 export(pca_with_pt_line)
@@ -75,6 +77,8 @@ export(save_for_10X)
 export(save_hub_score)
 export(save_peak_genes)
 export(save_to_csv)
+export(scale_seurat)
+export(scale_seurat_with_seurat)
 export(seurat_heat)
 export(seurat_heat_highlight)
 export(seurat_heat_split)
@@ -88,6 +92,7 @@ importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,HeatmapAnnotation)
 importFrom(ComplexHeatmap,Legend)
 importFrom(Seurat,"Idents<-")
+importFrom(Seurat,"VariableFeatures<-")
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,VariableFeatures)
 importFrom(circlize,colorRamp2)
