--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_pseudotime_to_net)
 export(all_pathways_heat_pca)
 export(arrange_plots)
 export(arrow_axis)
+export(average_by_group)
 export(batch_correct)
 export(cell_heat)
 export(cell_violin)
@@ -75,6 +76,7 @@ export(run_dim_red)
 export(save_DE_genes)
 export(save_for_10X)
 export(save_hub_score)
+export(save_indiv_plots)
 export(save_peak_genes)
 export(save_to_csv)
 export(scale_seurat)
@@ -91,6 +93,7 @@ export(unique_DE_genes)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,HeatmapAnnotation)
 importFrom(ComplexHeatmap,Legend)
+importFrom(Seurat,"DefaultAssay<-")
 importFrom(Seurat,"Idents<-")
 importFrom(Seurat,"VariableFeatures<-")
 importFrom(Seurat,GetAssayData)
