--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(DE_lineage_genes)
 export(RunGPLVM)
+export(TF_enrichment_pairwise)
 export(add_pseudotime_to_net)
 export(all_pathways_heat_pca)
 export(arrange_plots)
+export(arrange_poster)
 export(arrow_axis)
 export(average_by_group)
 export(batch_correct)
@@ -25,7 +27,7 @@ export(date_to_gene)
 export(dim_plot_cell_similarity)
 export(dim_red_3D_traj)
 export(display_cluster_enrichment)
-export(enrich_bar)
+export(fast_read_df)
 export(fast_subset)
 export(filter_genes)
 export(find_DE_genes)
@@ -41,6 +43,7 @@ export(get_all_path_view)
 export(get_cell_similarity)
 export(get_module_score)
 export(get_path)
+export(get_path_genes)
 export(get_phase_score)
 export(graph_abs_time)
 export(hub_score)
@@ -69,9 +72,11 @@ export(pseudo_real_time)
 export(raw_to_seurat)
 export(remove_ribosomal_genes)
 export(return_aes_param)
+export(rich_forest)
 export(ridge_all_types)
 export(run_GSEA)
 export(run_GSEA_all_types)
+export(run_GSEA_pairwise)
 export(run_dim_red)
 export(save_DE_genes)
 export(save_for_10X)
