--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,19 @@ export(RunGPLVM)
 export(TF_enrichment_pairwise)
 export(add_pseudotime_to_net)
 export(all_pathways_heat_pca)
+export(amnioid_hist)
 export(arrange_plots)
 export(arrange_poster)
 export(arrow_axis)
 export(average_by_group)
 export(batch_correct)
+export(boxplot_gene)
 export(cell_heat)
 export(cell_violin)
 export(change_expre_level)
 export(clean_metadata)
 export(colors2labels)
+export(compare_average)
 export(compare_cluster_enrichment)
 export(compute_all_cor)
 export(custom_net)
@@ -53,6 +56,7 @@ export(load_all_data)
 export(load_correct_label)
 export(make_cycle_heat)
 export(merge_seurat)
+export(multi_scatter)
 export(normalize_prob)
 export(partial_relevel)
 export(path_eigen)
@@ -68,7 +72,10 @@ export(plot_dim_red)
 export(plot_gene_PC)
 export(plot_prob_line)
 export(plot_two_branch)
+export(plot_xy_per_path)
+export(preprocess)
 export(pseudo_real_time)
+export(quantile_plot)
 export(raw_to_seurat)
 export(remove_ribosomal_genes)
 export(return_aes_param)
