--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(RunGPLVM)
 export(TF_enrichment_pairwise)
 export(add_pseudotime_to_net)
 export(all_pathways_heat_pca)
-export(amnioid_hist)
 export(arrange_plots)
 export(arrange_poster)
 export(arrow_axis)
@@ -37,6 +36,7 @@ export(find_DE_genes)
 export(find_eigengene)
 export(find_peak)
 export(find_transition_from_seurat)
+export(frequency_plot)
 export(gene_name_to_entrez)
 export(gene_over_pseudotime)
 export(gene_per_enriched_term)
