--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(cell_heat)
 export(cell_violin)
 export(change_expre_level)
 export(clean_metadata)
+export(colony_count)
 export(colors2labels)
 export(compare_average)
 export(compare_cluster_enrichment)
@@ -24,6 +25,7 @@ export(custom_net_cells)
 export(custom_net_diff_nets)
 export(custom_tick)
 export(cycle_over_time)
+export(data_timeline)
 export(date_to_CS)
 export(date_to_gene)
 export(dim_plot_cell_similarity)
@@ -68,6 +70,7 @@ export(plot_DE_genes)
 export(plot_WGCNA_net)
 export(plot_all_WGCNA_nets)
 export(plot_cell_similarity)
+export(plot_colony_count)
 export(plot_dim_red)
 export(plot_gene_PC)
 export(plot_prob_line)
@@ -78,6 +81,7 @@ export(pseudo_real_time)
 export(quantile_plot)
 export(raw_to_seurat)
 export(remove_ribosomal_genes)
+export(reproducibility_mat)
 export(return_aes_param)
 export(rich_forest)
 export(ridge_all_types)
