--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(RunGPLVM)
 export(TF_enrichment_pairwise)
 export(add_pseudotime_to_net)
 export(all_pathways_heat_pca)
+export(all_vivo_all_vitro)
 export(arrange_plots)
 export(arrange_poster)
 export(arrow_axis)
@@ -60,6 +61,7 @@ export(make_cycle_heat)
 export(merge_seurat)
 export(multi_scatter)
 export(normalize_prob)
+export(p_val_all_pairs)
 export(partial_relevel)
 export(path_eigen)
 export(pca_with_pt_line)
@@ -102,6 +104,7 @@ export(seurat_heat_highlight)
 export(seurat_heat_split)
 export(seurat_violin)
 export(seurat_volcano)
+export(signif_p_val)
 export(standardise_name)
 export(theme_TB)
 export(time_cluster_plot)
